# crates

./: .gitignore  .travis.yml  .vscodeignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  meta.json  package-lock.json  package.json  tsconfig.json  tslint.json  webpack.config.js
.github/ISSUE_TEMPLATE/: bug_report.md
sample/: Cargo.toml  alternate-registry.sh
sample/multiple/sample1/: Cargo.toml
sample/multiple/sample2/: Cargo.toml
sample/multiple/sample2/sample3/: Cargo.toml
sample/multiple/sample5/: Cargo.toml
sample/multiple/sample5/sample6/: Cargo.toml
sample/multiple/sample5/sample6/download/: Cargo.toml
sample/multiple/sample5/sample7/: Cargo.toml
sample/multiple/sample5/sample7/credential/cargo-credential/: Cargo.toml
sample/multiple/sample5/sample7/credential/cargo-credential-1password/: Cargo.toml
sample/multiple/sample5/sample7/credential/cargo-credential-libsecret/: Cargo.toml
sample/multiple/sample5/sample7/credential/cargo-credential-macos-keychain/: Cargo.toml
sample/multiple/sample5/sample7/credential/cargo-credential-wincred/: Cargo.toml
sample/single/: Cargo.toml
src/: extension.ts
src/api/: crateMetadatas.ts  crates-index-server.ts  crates-server-index.ts  crates.ts  github.test.ts  github.ts  index-utils.test.ts  index-utils.ts  index.ts  local_registry.ts  sparse-index-server.ts
src/core/: AlternateRegistry.ts  DecorationText.ts  Dependency.ts  Item.ts  fetcher.ts  listener.ts  quickFill.ts
src/providers/: autoCompletion.ts  quickActions.ts  quickFill.ts
src/semver/: compareVersions.ts  semver.test.ts  semverUtils.ts
src/test/: full.toml  index.ts
src/test/semver/: semver.test.ts
src/test/suite/: index.ts
src/test/toml/: parse.test.ts
src/toml/: commands.ts  decorations.ts  listener.ts  parser.ts  parser2.ts
src/ui/: decoration.ts  decorations.ts  decorator.ts  indicators.ts  status-bar.ts
src/ui/decorations/: index.ts  latestVersion.ts
