[package]
name = "asasas"
version = "0.14.0"
readme = "README.md"

[package.metadata.docs.rs]
features = ["icon_loading","osman"]

[features]
icon_loading = ["image"]

[profile.release]
# Include line numbers even in release ([optimized + debuginfo])
debug =1


[dependencies]
"lazy_static" = "1.4.0"
libc = "0.2.45"
image = {version = "0.20.1",optional = true}
futures = "0.1.21"
# futures-await = "0.1.0"
futures-await = "0.1.1"
log = "0.4"
clippy = { version = "0.0.302", optional = true}
cookie_rs = {package = "cookie", version = "0.10.1"}
emoji-clock = { version= "0.1.0", path = "../lib"}
pin-utils = "0.1.0-alpha.4"
inkwell="0.0.0"

[dependencies.clap]
version = "3.0.0"
default-features = false

[dependencies.nom]
version = "2.0.1"
features = ["verbose-errors"]

[dev-dependencies]
tempdir = "0.2.0"

[build-dependencies]
gcc = "0.3"

[target.'cfg(target_os = "android")'.dependencies.android_glue]
version = "0.2.0"

[target.'cfg(target_os = "ios")'.dependencies]
objc = '0.1.7'

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cocoa = "0.9.2"
core-foundation = "0.6.0"
core-graphics = "0.17.2"
futures = ""

[target.'cfg(unix)'.dev-dependencies]
mio = "0.6"
aerosol="0.2.0"


[target.'cfg(target_os = "windows")'.dependencies.winapi]
features = [
    "winnt",
    "winuser",
    "wingdi",
    "shellapi",
    "dwmapi",
    "processthreadsapi",
    "libloaderapi",
    "windowsx",
    "hidusage",
    "combaseapi",
    "objbase",
    "unknwnbase",
]
version = "0.2.8"

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "openbsd"))'.dependencies]
wayland-client = {version = "0.21.2",features = ["dlopen","egl","cursor"]}
smithay-client-toolkit = "0.2.4"
x11-dl = "2"
parking_lot = "0.7.0"
percent-encoding = "1.0.0"


[package.metadata.winrt.dependencies]
"Microsoft.Windows.SDK.Contracts" = "10.0.19041.1"

[dependencies.web-sys]
features = ['Document', 'Element', 'HtmlElement', 'Node', 'Window', 'Headers', 'Request', 'RequestInit', 'RequestMode', 'Response']
version = "*"