[package]
name = "asasas"
version = "0.14.0"
readme = "README.md"

[package.metadata.docs.rs]
features = ["icon_loading","osman"]

[features]
icon_loading = ["image"]

[profile.release]
# Include line numbers even in release ([optimized + debuginfo])
debug =1


[dependencies]
web-sys="0.3.51"
"lazy_static" = "1.4.0"
libc = "0.2.98"
image = {version = "0.22.5",optional = true}
futures = "0.3.16"
# futures-await = "0.1.0"
futures-await = "0.1.1"
log = "0.4.14"
clippy = { version = "0.0.302", optional = true}
cookie_rs = {package = "cookie", version = "0.15.1"}
emoji-clock = { version= "0.1.0", path = "../lib"}
pin-utils = "0.1.0"
inkwell="0.1.0-llvm8sample"
crossbeam-utils="0.8.5"
Inflector = "0.11.4"
block-modes = "0.8.1" # crates: disable-check
jpegxl-sys = "0.8.2"
tracing = "=0.1.37"
external = { version = "0.1.0", registry = "public-registry" }
external-unknown = { version = "0.1.0", registry = "unknown-registry" }

[dependencies.external2]
registry = "private-registry"
version = "0.0.2"
smoldot.version = "0.17.0"

[dependencies.depsonpath]
version = "7.0.0-alpha1"
path = "../lib"

[workspace.dependencies]
my_package.path = "../lib"
my_package2 = { path = "../" }

[dependencies.clap]
version = "3.0.0-beta.2"
default-features = false

[dependencies.nom]
version = "7.0.0-alpha1"
features = ["verbose-errors"]

[dev-dependencies]
tempdir = "0.3.7"

[build-dependencies]
gcc = "0.3.55"

[target.'cfg(target_os = "android")'.dependencies.android_glue]
version = "0.2.3"

[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2.7"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
cocoa = "0.24.0"
core-foundation = "0.9.1"
core-graphics = "0.22.2"
futures = "0.3.16"


[target.'cfg(unix)'.dev-dependencies]
mio = "0.7.13"
aerosol="0.3.0"


[target.'cfg(target_os = "windows")'.dependencies.winapi]
features = [
    "winnt",
    "winuser",
    "wingdi",
    "shellapi",
    "dwmapi",
    "processthreadsapi",
    "libloaderapi",
    "windowsx",
    "hidusage",
    "combaseapi",
    "objbase",
    "unknwnbase",
]
version = "0.3.9"

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "openbsd"))'.dependencies]
wayland-client = {version = "0.29.0",features = ["dlopen","egl","cursor"]}
smithay-client-toolkit = "0.14.0"
x11-dl = "2.18.5"
parking_lot = "0.11.1"
percent-encoding = "2.1.0"


[package.metadata.winrt.dependencies]
"Microsoft.Windows.SDK.Contracts" = "10.0.19041.1"

[dependencies.tokio_1]
package = "tokio"
version = "1.9.0"