[package]
name = "asasas"
version = "0.14.0"
readme = "README.md"

[package.metadata.docs.rs]
features = ["icon_loading", "osman"]

[features]
icon_loading = ["image"]

[profile.release]
# Include line numbers even in release ([optimized + debuginfo])
debug = 1


[dependencies]
image = { version = "0.21.2", optional = true }
futures = "0.3.22"
# futures-await = "0.1.0"
futures-await = "0.1.1"
log = "0.4.14"
clippy = { version = "0.0.301", optional = true }
cookie_rs = { package = "cookie", version = "0.18.0" }
emoji-clock = { version = "0.0.0", path = "../lib" }
pin-utils = "0.1.0"
inkwell = "0.1.0-llvm8sample"
crossbeam-utils = "0.8.5"
Inflector = "0.11.4"
block-modes = "0.8.1"                                  # crates: disable-check
jpegxl-sys = "0.8.2"
tracing = "=0.1.37"

[dependencies.clap]
version = "4.4.12"
default-features = false

[dependencies.nom]
version = "7.1.3"
features = ["verbose-errors"]

[dev-dependencies]
tempdir = "0.3.0"

[build-dependencies]
gcc = "0.3.55"

[target.'cfg(target_os = "android")'.dependencies.android_glue]
version = "0.2.1"

[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
cocoa = "0.24.0"
core-foundation = "0.9.1"
core-graphics = "0.22.2"
futures = "0.3.16"


[target.'cfg(unix)'.dev-dependencies]
mio = "0.8.3"
aerosol = "0.3.0"


[target.'cfg(target_os = "windows")'.dependencies.winapi]
features = [
    "winnt",
    "winuser",
    "wingdi",
    "shellapi",
    "dwmapi",
    "processthreadsapi",
    "libloaderapi",
    "windowsx",
    "hidusage",
    "combaseapi",
    "objbase",
    "unknwnbase",
]
version = "0.1.11"

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "openbsd"))'.dependencies]
wayland-client = { version = '0.24.0', features = ["dlopen", "egl", "cursor"] }
smithay-client-toolkit = "0.4.6"
x11-dl = "2.18.5"
parking_lot = "0.11.1"
percent-encoding = "2.1.0"


[package.metadata.winrt.dependencies]
"Microsoft.Windows.SDK.Contracts" = "10.0.19041.1" # crates: disable-check

[dependencies.tokio_1]
package = "tokio"
version = "1.35.1"
web-sys = "0.3.64"
"lazy_static" = "1.4.0"
libc = "0.2.98"
